<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="map_name">Map</string>
    <string name="action_settings">Settings</string>
    <string name="data">Data</string>
    <string name="styles">Styles</string>
    <string name="markers">Markers</string>
    <string name="sources">Sources</string>
    <string name="layers">Layers</string>
    <string name="menu_layers">Layers</string>
    <string name="about_mapstore">About MapStore</string>
    <string name="min_zoom">Minimum zoom level</string>
    <string name="max_zoom">Maximum zoom Level</string>
    <string name="style_point">Point</string>
    <string name="style_line">Line</string>
    <string name="style_fill">Fill</string>
    <string name="style_visibility">Visibility</string>
    <string name="error_saving_style">Couldn\'t save Style</string>
    <string name="error_reading_style">Couldn\'t read Style</string>
    <string name="error_unable_getfeature_db">Unable to get the feature from the local database</string>
    <string name="error_getting_data_from_database">Error getting data from database</string>
    <string name="error_connectivity_problem">Connectivity problem</string>
    <string name="use_this_feature">Use This Feature</string>
    <string name="use_this_feature_description">Do you want to place a marker on this feature?</string>
    <string name="menu_preferences">Map Preferences</string>
    <string name="menu_geostore">MapStore</string>
   	<string name="dialog_title">Test Data Download</string>
	<string name="dialog_message">Do you want to download data files test archive?</string>
	<string name="download_error_message">Could not download data</string>
	<string name="button_download">OK</string>
	<string name="button_undownload">Later</string>
	<string name="progress_dialog_title">Please Wait</string>
	<string name="progress_dialog_message">Downloading data&#8230;</string>
	<string name="progress_dialog_unzipping">Unzipping&#8230;</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="other">Other</string>
	<string name="edit">Edit</string>
	<string name="details">Details</string>
	<string name="available_maps">Available Maps</string>
	<string name="map_details">Map Details</string>
	<string name="empty_layers">No layer compatible in this map</string>
	<string name="add_selected_layers">Add Selected Layers</string>
	<string name="select_layers">Select Layers</string>
	<string name="load_map">Load Map</string>
	<string name="load_all_as_map">Load all layers</string>
	<string name="select_layers_to_add">Select layers to add</string>
	<string name="add_the_selected_layers_to_the_map">Add the selected layers to the map</string>
	<string name="name">Name</string>
	<string name="description">Description</string>
	<string name="url">URL</string>
	<string name="test">Test</string>
	<string name="geostore_url">GeoStore URL</string>
	<string name="name_for_the_new_source">Name for the new resource</string>
	<string name="description_for_the_new_source">A short description of the new resource (optional)</string>
	<string name="geostore_url_sample">(e.g. http://test.org/geostore/rest/)</string>
	<string name="warning_geostore_url_not_verified">it was not possible to verify the validity of the URL.</string>
	<string name="question_do_you_want_to_continue_saving">Do you want to save anyway?</string>
	<string name="remove">Remove</string>
	<string name="mapstore_url_correct">The URL of mapstore is correct</string>
	<string name="saving_source">Saving Source&#8230;</string>
	<string name="error_during_save_process">Error during save process</string>
	<string name="error_rendering">Some layers can not be displayed</string>
	<string name="verifying_mapstore_url">Verifying MapStore URL&#8230;</string>
	<string name="field_required">This field is required!</string>
	<string name="source_type">Source Type</string>
	<string name="loading_layers">Loading layer&#8230;</string>
	<string name="no_layer_loaded">No layer loaded</string>
	<string name="move_up">Move up</string>
	<string name="move_down">Move down</string>
	<string name="loading_layer_list">Loading layer list</string>
	<string name="please_wait">Please wait &#8230;</string>
	<string name="are_you_sure_to_load_this_map">Are you sure to load this map? this operation will replace all the current selected layers</string>
    <string name="button_close_content">Close</string>
    <string name="exit">Exit</string>
    <string name="button_confirm_exit">Do you really want to exit?</string>
    <string name="button_confirm_exit_title">Exit</string>
    <string name="error_parsing_request">There was an error parsing the request</string>
	<!-- Geopaparazzi Library Strings -->
    <string name="yes">yes</string>
    <string name="no">no</string>
	<string name="save">Save</string>
	<string name="menu_settings">Settings</string>
    <string name="stroke_color">Stroke color        </string>
    <string name="width">Stroke width</string>
    <string name="alpha">Stroke alpha</string>
    <string name="fill_color">Fill color</string>
    <string name="fill_alpha">Fill alpha</string>
    <string name="point_shape_">"Point shape     "</string>
    <string name="point_size">Point size</string>
    <string name="decimation">Decimation</string>
    <string name="decimation_factor_default">0.000001</string>
    <string name="dash">Stroke dashed</string>
    <string name="download_not_enough_space">You don\'t seem to have enough space available, cannot download this file</string>
        

</resources>