<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        android:title="@string/edit"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_content_discard"
        android:showAsAction="ifRoom"
        android:title="@string/remove"/>
    <item
        android:id="@+id/up"
        android:icon="@drawable/ic_navigation_collapse"
        android:showAsAction="ifRoom"
        android:title="@string/move_up"/>
    <item
        android:id="@+id/down"
        android:icon="@drawable/ic_navigation_expand"
        android:showAsAction="ifRoom"
        android:title="@string/move_down"/>

</menu>