<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!--  <item android:id="@+id/search"
          android:title="Search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
           -->
           <item android:id="@+id/layer_menu_action"
          android:title="@string/sources"
          android:icon="@drawable/ic_add_to_queue"
          android:showAsAction="always"
           /> 
           <item android:id="@+id/settings"
               android:title="@string/action_settings"
               android:showAsAction="never"
               android:icon="@drawable/ic_action_settings"></item>
           <item android:id="@+id/infoview"
               android:title="@string/about_mapstore"
               android:showAsAction="never"
               android:icon="@drawable/ic_action_about"></item>
           <item android:id="@+id/exitview"
               android:title="@string/exit"
               android:showAsAction="never"
               android:icon="@drawable/ic_content_remove"></item>
</menu>
