<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <!-- ************** -->
   	<!-- Line ********* -->
   	<!-- ************** -->
   	<!-- Title -->
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/style_line"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
	<!-- Color -->
	<TextView
	    android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/stroke_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	<!-- Width -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/width"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/main_text_color_neutral" />
    <Spinner
        android:id="@+id/width_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_widths"
        android:padding="5dp" />
    <!-- Opacity -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/alpha"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/main_text_color_neutral" />

    <Spinner
        android:id="@+id/alpha_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_percentage"
        android:padding="5dp" /> 
    <!-- Dashed Line -->
     <TextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/dash"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/main_text_color_neutral" />
     
      <Spinner
        android:id="@+id/dash_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_dashes"
        android:padding="5dp" />
</merge>
