<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dataList"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
     >
	
    <LinearLayout
        android:id="@+id/layer_checkboxes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true" >

      <TextView
            
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_layers" />
        <!-- Checkboxes for layer enable/disable -->

        <CheckBox
            android:id="@+id/markers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/markers" />

        <CheckBox
            android:id="@+id/data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/data" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layer_checkboxes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/list_header_title"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/styles" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >
        </ListView>
    </LinearLayout>

</RelativeLayout>