<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <!-- **************************************** -->	
    <!-- Fill                                     -->
   	<!-- **************************************** -->	
    <!-- Title -->
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/style_fill"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
    <!-- Fill Color -->
    <TextView
	    android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/fill_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	<!-- fill Opacity -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/fill_alpha"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/main_text_color_neutral" />

    <Spinner
        android:id="@+id/fill_alpha_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/array_percentage"
        android:padding="5dp" />   
</merge>